5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1721_3067.log
== TEST (2019-05-02 18:32:23) 
-- CODE:
print float (ESPADA FLAMEJANTE)
print input (n+6)
print float (CAUDA CONSTRITORA)
print input ( d1 + d2 + d3 * d4 )
print int (ESPADA FLAMEJANTE 6+n)

-- ERROR:
File "XXXX", line 1
    print float (ESPADA FLAMEJANTE)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:10) 
-- CODE:
print float (ESPADA FLAMEJANTE)
print input (n+6)
print input ( n*6)
print float (CAUDA CONSTRITORA)
print input ( d1 + d2 + d3 * d4 )
print input d1 + d2
print input d2 +d3
print input d3*d4
-- ERROR:
File "XXXX", line 1
    print float (ESPADA FLAMEJANTE)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:23) 
-- CODE:
print float (ESPADA FLAMEJANTE)

print float (CAUDA CONSTRITORA)
print input ( d1 + d2 + d3 * d4 )
print input d1 + d2
print input d2 +d3
print input d3*d4
-- ERROR:
File "XXXX", line 1
    print float (ESPADA FLAMEJANTE)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:27) 
-- CODE:
print float (ESPADA FLAMEJANTE)
print float (CAUDA CONSTRITORA)
print input ( d1 + d2 + d3 * d4 )
print input d1 + d2
print input d2 +d3
print input d3*d4
-- ERROR:
File "XXXX", line 1
    print float (ESPADA FLAMEJANTE)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:53) 
-- CODE:
print float (ESPADAS FlAMEJANTES)
print input n*6
-- ERROR:
File "XXXX", line 1
    print float (ESPADAS FlAMEJANTES)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:35) 
-- CODE:
print float (ESPADAS FlAMEJANTES)
print input (N*6)
print float (CAUDA CONSTRITORA)
print int ( D1 + D2 ) + ( D2 + D3 ) + ( D3 * D4 )
-- ERROR:
File "XXXX", line 1
    print float (ESPADAS FlAMEJANTES)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:45) 
-- CODE:
print (CAUDA CONSTRITORA)
print int ( D1 + D2 )
print int ( D2 + D3 )
-- ERROR:
File "XXXX", line 1
    print (CAUDA CONSTRITORA)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
